--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I am a computer coding student</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>I am originally from Ireland</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>I enjoy scuba diving, reading biographies and learning new skills.</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>Software developer</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Perth city, Australia</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>For a challenging career change</p>
     </section>
 
     <footer id="footer">
